ghc-4335c07/testsuite/tests/rename/should_fail/rnfail027.hs
-- !!! infix declarations for unknown identifiers aren't allowed

module ShouldFail where

infixl 9 `wibble`
